[gd_scene load_steps=7 format=3 uid="uid://b8lfk4ccumg1e"]

[ext_resource type="PackedScene" uid="uid://b08wjtbos7nqd" path="res://addons/hyh.cutscene_graph/editor/controls/expressions/Expression.tscn" id="1_ephjt"]
[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/controls/expressions/MoveableExpression.gd" id="2_56m4y"]
[ext_resource type="Texture2D" uid="uid://yu1u674q1ejm" path="res://addons/hyh.cutscene_graph/icons/icon_triple_bar.svg" id="2_c0qoh"]
[ext_resource type="Texture2D" uid="uid://c4l5p4t0wt4i8" path="res://addons/hyh.cutscene_graph/icons/icon_remove.svg" id="3_4lvh7"]
[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/controls/expressions/DragHandle.gd" id="4_c35qm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fvjos"]

[node name="MoveableExpression" instance=ExtResource("1_ephjt")]
script = ExtResource("2_56m4y")

[node name="PanelContainer" type="PanelContainer" parent="." index="0"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_fvjos")

[node name="MC" type="MarginContainer" parent="PanelContainer" index="0"]
layout_mode = 2

[node name="ExpressionContainer" type="VBoxContainer" parent="PanelContainer/MC" index="0"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/MC/ExpressionContainer" index="0"]
layout_mode = 2

[node name="DragHandle" type="TextureRect" parent="PanelContainer/MC/ExpressionContainer/Header" index="0"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 0
texture = ExtResource("2_c0qoh")
stretch_mode = 2
script = ExtResource("4_c35qm")

[node name="Title" type="Label" parent="PanelContainer/MC/ExpressionContainer/Header" index="1"]
layout_mode = 2
text = "Title Placeholder"

[node name="RemoveButton" type="Button" parent="PanelContainer/MC/ExpressionContainer/Header" index="2"]
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("3_4lvh7")
flat = true

[connection signal="pressed" from="PanelContainer/MC/ExpressionContainer/Header/RemoveButton" to="." method="_on_remove_button_pressed"]
